# claude-code-training

./: .gitignore  README.md
_notes/: 01-context-engineering.md  02-claude-code-first-steps.md  02-claude-code-overview.md  03-model-context-protocol.md  04-claude-code-plugins.md  05-wiring-claude-code-with-github.md  06-advanced-workflows.md  07-output-styles.md  08-agent-teams.md  09-agent-skills.md  10-claude-code-desktop.md  11-under-the-hood-deep-agents.md  12-under-the-hood-skills.md  13-vulnerabilities-in-ai-generated-apps.md
examples/agent_teams/: CLAUDE.md  converter.js  index.html  styles.css
examples/agents/: escrow-smart-contract.mmd
examples/agents/emoji-api/: CLAUDE.md  Cargo.toml  (+2 more)
examples/claude_plugins/: CLAUDE.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
examples/color_hook/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  color_generator.py  docker-compose.yml  pyproject.toml  requirements.txt  test_color_generator.py
examples/color_hook/.claude/: settings.local.json
examples/color_hook/.claude/skills/commit-changes/: SKILL.md
examples/color_hook/.claude/skills/test/: SKILL.md
examples/generative_artist/: .gitignore  CLAUDE.md  app.js  index.html  styles.css
examples/mcp_management/: .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  mcp_proxy.py  package-lock.json  package.json  proxy_config.json
examples/output-styles/: CLAUDE.md
examples/rust_api/: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  openapi.yaml
(+65 files in other folders)
